--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+body {
+    background: #7FFFD4;
+}
+
 
 
 
